# jsharpe

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.rej  .rhiza.env  .rhiza.history  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  pyproject.toml  pytest.ini  repository-comparison.md  ruff.toml  scoring-summary.md
.clusterfuzzlite/: Dockerfile  build.sh
.github/: template.yml
.github/actions/configure-git-auth/: README.md  action.yml
.github/actions/setup-project/: action.yml
.github/rhiza/: template.yml
.github/scripts/: build-extras.sh  marimushka.sh  sync.sh  update-readme-help.sh
.github/templates/: README.md  tailwind.html.j2
.github/templates/scripts/: apply_jinja.py
.github/workflows/: copilot-setup-steps.yml  marimo.yml  pre-commit.yml  release.yml  rhiza_benchmarks.yml  rhiza_book.yml  rhiza_ci.yml  rhiza_codeql.yml  rhiza_marimo.yml  rhiza_release.yml  rhiza_release.yml.rej  rhiza_validate.yml  rhiza_weekly.yml
.rhiza/: .cfg.toml  .env.rej  .rhiza-version.rej  history  rhiza.mk  rhiza.mk.rej  template-bundles.yml  template.yml
.rhiza/docs/: PRIVATE_PACKAGES.md
.rhiza/make.d/: 02-book.mk  08-docs.mk  book.mk  book.mk.rej  quality.mk.rej  test.mk  test.mk.rej
.rhiza/requirements/: tests.txt  tools.txt.rej
.rhiza/tests/: README.md  conftest.py  test_utils.py
.rhiza/tests/api/: __init__.py  conftest.py  test_github_targets.py  test_makefile_api.py  test_makefile_targets.py  test_makefile_targets.py.rej
.rhiza/tests/integration/: __init__.py  test_book_targets.py  test_marimushka.py  test_notebook_execution.py  test_release.py  test_sbom.py
.rhiza/tests/security/: test_security_patterns.py  test_security_patterns.py.rej
.rhiza/tests/stress/: test_git_stress.py  test_makefile_stress.py
.rhiza/tests/structure/: __init__.py  test_project_layout.py  test_requirements.py  test_template_bundles.py.rej
.rhiza/tests/sync/: __init__.py  conftest.py  test_docstrings.py  test_readme_validation.py  test_rhiza_version.py
.rhiza/tests/utils/: __init__.py  test_version_matrix.py
.rhiza/utils/: version_matrix.py
book/marimo/: demo.py  psr.py
book/marimo/notebooks/: psr.py  rhiza.py
docs/: ASSETS.md  CUSTOMIZATION.md  QUICK_REFERENCE.md  RELEASING.md
docs/api/: sharpe.md
notebooks/: Exhibit_11,12_Optimal_Number_of_Clusters.ipynb  Exhibit_13_sd(max).ipynb  Exhibit_1_Hedge_Fund_Returns.ipynb  Exhibit_2_Variance_Plot.ipynb  Exhibit_3_PSR.ipynb  Exhibit_4_Var_Max_X.ipynb  Exhibit_5_FWER.ipynb  Exhibit_6_FDR.ipynb  Exhibit_7_SFDR.ipynb
notebooks/marimo/: Exhibit_11_12_Optimal_Number_of_Clusters.py  Exhibit_13_sd_max_.py  Exhibit_1_Hedge_Fund_Returns.py  Exhibit_2_Variance_Plot.py  Exhibit_3_PSR.py  Exhibit_4_Var_Max_X.py  Exhibit_5_FWER.py  Exhibit_6_FDR.py  Exhibit_7_SFDR.py  functions.py
src/jsharpe/: __init__.py  sharpe.py
src/jsharpe/sharpe/: __init__.py  clustering.py  corrections.py  generators.py  linalg.py  psr.py  quadrature.py
tests/: __init__.py  _zoonek_functions.py  conftest.py  test_bump_script.py  test_migration.py  test_minimum_variance.py  test_ppoints.py  test_release_script.py  test_sharpe.py
tests/fuzz/: fuzz_sharpe.py
tests/test_config_templates/: test_docstrings.py  test_makefile.py  test_readme.py  test_structure.py  test_sync_script.py
tests/test_rhiza/: test_bundles.py  test_cli_commands.py
