[project]
name = "jsharpe"
version = "0.6.1"
description = "Probabilistic Sharpe ratio and related statistics."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]

authors = [
    { name = "Thomas Schmelzer", email = "thomas@jqr.ae" }
]

keywords = ["Sharpe ratio", "quant", "risk", "statistics"]
dependencies = [
    "numpy>=2.3.0",
    "scipy>=1.16.3",
]

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Repository = "https://github.com/tschm/jsharpe"
Homepage = "https://github.com/tschm/jsharpe"
Issues = "https://github.com/tschm/jsharpe/issues"

[dependency-groups]
dev = [
    "marimo==0.23.6",
    "cvxpy>=1.7.0",
    "jinja2>=3.1.6",
    "plotly>=6.5",
    "pandas>=2.3"
]
test = [
    "pytest>=8.0",
]
lint = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

